add custom scroll bar

--- a/dashboard/customer.html
+++ b/dashboard/customer.html
@@ -129,7 +129,7 @@
           </div>
         </div>
       </nav>
-      <main class="overflow-auto col-12 col-md px-md-3 pt-2">
+      <main class="overflow-auto col-12 col-md px-md-3 pt-2 " style="height: 100vh">
         <header class="custom-header row align-items-center">
           <div class="d-none d-sm-block col">
             <nav aria-label="breadcrumb mb-0 pb-0">
