add finances layout

--- a/dashboard/customer.html
+++ b/dashboard/customer.html
@@ -703,7 +703,295 @@
                   class="accordion-collapse collapse show"
                   aria-labelledby="finance-heading"
                 >
-                  <div class="accordion-body">This is the accordion body</div>
+                  <!-- Finance Panel Body -->
+                  <div class="accordion-body">
+                    <!-- Paymenys Col -->
+                    <div class="payments col">
+                      <div class="row mb-3">
+                        <h3 class="col-12 fs-6 col-sm-6 col-lg-12 col-xxl-6">
+                          <b>Payments</b>
+                        </h3>
+                        <div
+                          class="col-12 col-sm text-sm-end col-lg-12 text-lg-start col-xxl text-xxl-end"
+                        >
+                          Current Balance
+                          <span class="fs-6 badge bg-secondary">R20</span>
+                        </div>
+                      </div>
+                      <div
+                        class="payments-container overflow-auto border rounded p-2"
+                      >
+                        <!-- Payment Card -->
+                        <div class="card">
+                          <div class="card-body p-2">
+                            <div class="col-12" style="font-size: 0.7rem">
+                              #221208CA901
+                            </div>
+                            <div class="row">
+                              <div class="col">2022/12/08</div>
+                              <div
+                                class="col text-end text-sm-center text-lg-end text-xxl-center"
+                              >
+                                CASH
+                              </div>
+                              <div
+                                class="col-12 col-sm col-lg-12 col-xxl text-end text-success"
+                              >
+                                + R22.00
+                                <i class="bi bi-cash-coin ms-1"></i>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                        <!-- Payment Card -->
+                        <div class="card">
+                          <div class="card-body p-2">
+                            <div class="col-12" style="font-size: 0.7rem">
+                              #221208CA901
+                            </div>
+                            <div class="row">
+                              <div class="col">2022/12/08</div>
+                              <div
+                                class="col text-end text-sm-center text-lg-end text-xxl-center"
+                              >
+                                CASH
+                              </div>
+                              <div
+                                class="col-12 col-sm col-lg-12 col-xxl text-end text-success"
+                              >
+                                + R22.00
+                                <i class="bi bi-cash-coin ms-1"></i>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                        <!-- Payment Card -->
+                        <div class="card">
+                          <div class="card-body p-2">
+                            <div class="col-12" style="font-size: 0.7rem">
+                              #221208CA901
+                            </div>
+                            <div class="row">
+                              <div class="col">2022/12/08</div>
+                              <div
+                                class="col text-end text-sm-center text-lg-end text-xxl-center"
+                              >
+                                CASH
+                              </div>
+                              <div
+                                class="col-12 col-sm col-lg-12 col-xxl text-end text-success"
+                              >
+                                + R22.00
+                                <i class="bi bi-cash-coin ms-1"></i>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                        <!-- Payment Card -->
+                        <div class="card">
+                          <div class="card-body p-2">
+                            <div class="col-12" style="font-size: 0.7rem">
+                              #221208CA901
+                            </div>
+                            <div class="row">
+                              <div class="col">2022/12/08</div>
+                              <div
+                                class="col text-end text-sm-center text-lg-end text-xxl-center"
+                              >
+                                CASH
+                              </div>
+                              <div
+                                class="col-12 col-sm col-lg-12 col-xxl text-end text-success"
+                              >
+                                + R22.00
+                                <i class="bi bi-cash-coin ms-1"></i>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                        <!-- Payment Card -->
+                        <div class="card">
+                          <div class="card-body p-2">
+                            <div class="col-12" style="font-size: 0.7rem">
+                              #221208CA901
+                            </div>
+                            <div class="row">
+                              <div class="col">2022/12/08</div>
+                              <div
+                                class="col text-end text-sm-center text-lg-end text-xxl-center"
+                              >
+                                CASH
+                              </div>
+                              <div
+                                class="col-12 col-sm col-lg-12 col-xxl text-end text-success"
+                              >
+                                + R22.00
+                                <i class="bi bi-cash-coin ms-1"></i>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="invoices col mt-3">
+                      <div class="col-12 mb-3"><b>Invoices</b></div>
+                      <div
+                        class="invoices-container col-12 border rounded p-2 overflow-auto"
+                      >
+                        <!-- Invoice Card -->
+                        <div class="card">
+                          <div class="card-body">
+                            <div class="row">
+                              <div class="col" style="font-size: 0.7rem">
+                                #2201901
+                              </div>
+                            </div>
+                            <div class="row">
+                              <div class="col">March, 01, 2022</div>
+                              <div
+                                class="col text-end text-sm-center text-lg-end text-xxl-center"
+                              >
+                                R 180.00
+                              </div>
+                              <div
+                                class="pdf-icon col col-12 col-sm col-lg-12 col-xxl text-end"
+                              >
+                                <a href="" class="link-success">
+                                  <i class="bi bi-file-earmark-pdf-fill"></i>
+                                  PDF</a
+                                >
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="card">
+                          <div class="card-body">
+                            <div class="row">
+                              <div class="col" style="font-size: 0.7rem">
+                                #2201901
+                              </div>
+                            </div>
+                            <div class="row">
+                              <div class="col">March, 01, 2022</div>
+                              <div
+                                class="col text-end text-sm-center text-lg-end text-xxl-center"
+                              >
+                                R 180.00
+                              </div>
+                              <div
+                                class="pdf-icon col col-12 col-sm col-lg-12 col-xxl text-end"
+                              >
+                                <a href="" class="link-success">
+                                  <i class="bi bi-file-earmark-pdf-fill"></i>
+                                  PDF</a
+                                >
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="card">
+                          <div class="card-body">
+                            <div class="row">
+                              <div class="col" style="font-size: 0.7rem">
+                                #2201901
+                              </div>
+                            </div>
+                            <div class="row">
+                              <div class="col">March, 01, 2022</div>
+                              <div
+                                class="col text-end text-sm-center text-lg-end text-xxl-center"
+                              >
+                                R 180.00
+                              </div>
+                              <div
+                                class="pdf-icon col col-12 col-sm col-lg-12 col-xxl text-end"
+                              >
+                                <a href="" class="link-success">
+                                  <i class="bi bi-file-earmark-pdf-fill"></i>
+                                  PDF</a
+                                >
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="card">
+                          <div class="card-body">
+                            <div class="row">
+                              <div class="col" style="font-size: 0.7rem">
+                                #2201901
+                              </div>
+                            </div>
+                            <div class="row">
+                              <div class="col">March, 01, 2022</div>
+                              <div
+                                class="col text-end text-sm-center text-lg-end text-xxl-center"
+                              >
+                                R 180.00
+                              </div>
+                              <div
+                                class="pdf-icon col col-12 col-sm col-lg-12 col-xxl text-end"
+                              >
+                                <a href="" class="link-success">
+                                  <i class="bi bi-file-earmark-pdf-fill"></i>
+                                  PDF</a
+                                >
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="card">
+                          <div class="card-body">
+                            <div class="row">
+                              <div class="col" style="font-size: 0.7rem">
+                                #2201901
+                              </div>
+                            </div>
+                            <div class="row">
+                              <div class="col">March, 01, 2022</div>
+                              <div
+                                class="col text-end text-sm-center text-lg-end text-xxl-center"
+                              >
+                                R 180.00
+                              </div>
+                              <div
+                                class="pdf-icon col col-12 col-sm col-lg-12 col-xxl text-end"
+                              >
+                                <a href="" class="link-success">
+                                  <i class="bi bi-file-earmark-pdf-fill"></i>
+                                  PDF</a
+                                >
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="card">
+                          <div class="card-body">
+                            <div class="row">
+                              <div class="col" style="font-size: 0.7rem">
+                                #2201901
+                              </div>
+                            </div>
+                            <div class="row">
+                              <div class="col">March, 01, 2022</div>
+                              <div
+                                class="col text-end text-sm-center text-lg-end text-xxl-center"
+                              >
+                                R 180.00
+                              </div>
+                              <div
+                                class="pdf-icon col col-12 col-sm col-lg-12 col-xxl text-end"
+                              >
+                                <a href="" class="link-success">
+                                  <i class="bi bi-file-earmark-pdf-fill"></i>
+                                  PDF</a
+                                >
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
