--- a/dashboard/customer.html
+++ b/dashboard/customer.html
@@ -999,6 +999,6 @@
         </div>
       </main>
     </div>
-    <script src="../node_modules/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
