fix nav bar styling

--- a/dashboard/customer.html
+++ b/dashboard/customer.html
@@ -12,14 +12,9 @@
     <link rel="stylesheet" href="customer.css" />
   </head>
   <body class="container-fluid d-flex flex-column w-100">
-    <style>
-      .custom-nav > * {
-        height: 100%;
-      }
-    </style>
     <div class="row h-100">
       <nav
-        class="custom-nav d-none d-md-block col-12 col-md-4 col-lg-3 col-xl-3 col-xxl-2"
+        class="custom-nav position-sticky d-none d-md-block col-12 col-md-4 col-lg-3 col-xl-3 col-xxl-2"
       >
         <div class="row justify-content-center pt-3">
           <div class="custom-nav-head text-center col-12">
