add "no customer selected" message layout & design

--- a/dashboard/customer.html
+++ b/dashboard/customer.html
@@ -304,7 +304,7 @@
                           type="text"
                           name="name"
                           class="form-control"
-                          placeholder="John"
+                          placeholder="Name"
                         />
                       </div>
                       <div class="surname col-sm-6">
@@ -313,7 +313,7 @@
                           type="text"
                           name="surname"
                           class="form-control"
-                          placeholder="Doe"
+                          placeholder="Surname"
                         />
                       </div>
                     </div>
@@ -324,7 +324,7 @@
                           type="text"
                           name="address"
                           class="form-control"
-                          placeholder="22 Cactus Lane"
+                          placeholder="Address"
                         />
                       </div>
                     </div>
@@ -335,7 +335,7 @@
                           type="text"
                           name="suburb"
                           class="form-control"
-                          placeholder="Bassonia"
+                          placeholder="Suburb"
                         />
                       </div>
                       <div class="postal col-4">
@@ -344,7 +344,7 @@
                           type="text"
                           name="postal"
                           class="form-control"
-                          placeholder="1448"
+                          placeholder="Postal"
                         />
                       </div>
                     </div>
@@ -357,7 +357,7 @@
                           type="email"
                           name="email"
                           class="form-control"
-                          placeholder="johndoe@gmail.com"
+                          placeholder="Email Address"
                         />
                       </div>
                     </div>
