'no selected customer" message on customer page

--- a/dashboard/no-customer-selected.html
+++ b/dashboard/no-customer-selected.html
@@ -1,23 +1,21 @@
-<head></head>
-<body height="100vh">
-  <style>
-    .no-customer-container {
-      width: 100%;
-      height: 100%;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-    }
+<style>
+  .no-customer-container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 
-    .no-customer-container img {
-      width: 80%;
-    }
-  </style>
-  <div class="no-customer-container">
-    <img src="../images/main_shrugging.png" alt="" />
-    <p class="no-customer-text fs-5">
-      No customer has been selected. Select a customer from the Search Panel.
-    </p>
-  </div>
-</body>
+  .no-customer-container img {
+    width: 80%;
+    max-width: 200px;
+  }
+</style>
+<div class="no-customer-container">
+  <img src="../images/main_shrugging.png" alt="" />
+  <p class="no-customer-text fs-6 text-center">
+    No customer has been selected. Select a customer from the Search Panel.
+  </p>
+</div>
