--- a/dashboard/modals/add_customer.html
+++ b/dashboard/modals/add_customer.html
@@ -114,7 +114,7 @@
           </div>
           <h6 class="fs-5 text-center">Sanitizing Details</h6>
           <div class="modal-sanitizing-details-container border rounded p-2">
-            <div class="input-group">
+            <div class="input-group mb-3">
               <span class="input-group-text" id="modal-frequency-label"
                 >Frequency</span
               >
@@ -129,7 +129,7 @@
               />
             </div>
             <div>
-              <div class="input-group">
+              <div class="input-group mb-3">
                 <span class="input-group-text">Day</span>
                 <select
                   id="modal-day"
